feat(auth): add register functionality and validations
